@@ -1,3 +1,7 @@
+12 Mar 2007
+   [Alexey]
+   - Added support for remote dns on socks5 proxy
+
 06 Mar 2007
    [Pragma]
    - Added svg and generated png icons for kvs,kvc,kvt and kva files.
